--- a/app/src/main/res/navigation/main_graph.xml
+++ b/app/src/main/res/navigation/main_graph.xml
@@ -61,7 +61,7 @@
 
         <argument
             android:name="photoUrl"
-            app:argType="String"/>
+            app:argType="string"/>
 
     </fragment>
 </navigation>
