EntranceGuideUiTest.kt  - Hilt + Ui Test 구조 작성함  - UI TEST 작성중 HomeFragment에서 PopupWindow 수정 중

--- a/app/src/main/res/layout/base_spinner_list.xml
+++ b/app/src/main/res/layout/base_spinner_list.xml
@@ -17,7 +17,7 @@
         xmlns:app="http://schemas.android.com/apk/res-auto">
 
         <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/rv_list"
+            android:id="@+id/rv_popup_list"
             android:layout_width="match_parent"
             android:layout_height="300dp"
             tools:listitem="@layout/item_station_name"
