--- a/app/src/main/res/layout/item_station_name.xml
+++ b/app/src/main/res/layout/item_station_name.xml
@@ -20,7 +20,7 @@
         xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:onClick="@{() -> vm.onStationClick(data , position)}">
+        android:onClick="@{() -> vm.onStationClick(data)}">
 
         <androidx.appcompat.widget.AppCompatTextView
             android:id="@+id/tv_item_search_station_name"
