--- a/app/src/main/res/layout/fragment_location_list.xml
+++ b/app/src/main/res/layout/fragment_location_list.xml
@@ -4,10 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <data>
-
-        <variable
-            name="vm"
-            type="com.young.presentation.viewmodel.LocationViewModel" />
+        <variable name="vm" type="com.young.presentation.viewmodel.LocationViewModel" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -37,7 +34,8 @@
                     style="@style/LocationAreaRadiusTextView"
                     android:text="@string/location_radius_1"
                     android:onClick="@{() -> vm.onLocationRadiusData(1.0)}"
-                    LocationRadiusClickCheck="@{vm.locationRadiusData == 1.0}"
+                    LocationViewRadius="@{1.0}"
+                    LocationNowRadius="@{vm.locationRadiusData}"
                     android:layout_marginStart="20dp"
                     app:layout_constraintTop_toTopOf="parent"
                     app:layout_constraintBottom_toBottomOf="parent"
@@ -48,7 +46,8 @@
                     style="@style/LocationAreaRadiusTextView"
                     android:text="@string/location_radius_3"
                     android:onClick="@{() -> vm.onLocationRadiusData(3.0)}"
-                    LocationRadiusClickCheck="@{vm.locationRadiusData == 3.0}"
+                    LocationViewRadius="@{3.0}"
+                    LocationNowRadius="@{vm.locationRadiusData}"
                     app:layout_constraintTop_toTopOf="parent"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintStart_toEndOf="@id/tv_location_area_radius_1"/>
@@ -58,7 +57,8 @@
                     style="@style/LocationAreaRadiusTextView"
                     android:text="@string/location_radius_5"
                     android:onClick="@{() -> vm.onLocationRadiusData(5.0)}"
-                    LocationRadiusClickCheck="@{vm.locationRadiusData == 5.0}"
+                    LocationViewRadius="@{5.0}"
+                    LocationNowRadius="@{vm.locationRadiusData}"
                     app:layout_constraintTop_toTopOf="parent"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintStart_toEndOf="@id/tv_location_area_radius_3"/>
@@ -68,7 +68,8 @@
                     style="@style/LocationAreaRadiusTextView"
                     android:text="@string/location_radius_7"
                     android:onClick="@{() -> vm.onLocationRadiusData(7.0)}"
-                    LocationRadiusClickCheck="@{vm.locationRadiusData == 7.0}"
+                    LocationViewRadius="@{7.0}"
+                    LocationNowRadius="@{vm.locationRadiusData}"
                     app:layout_constraintTop_toTopOf="parent"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintStart_toEndOf="@id/tv_location_area_radius_5"/>
@@ -78,7 +79,8 @@
                     style="@style/LocationAreaRadiusTextView"
                     android:text="@string/location_radius_10"
                     android:onClick="@{() -> vm.onLocationRadiusData(10.0)}"
-                    LocationRadiusClickCheck="@{vm.locationRadiusData == 10.0}"
+                    LocationViewRadius="@{10.0}"
+                    LocationNowRadius="@{vm.locationRadiusData}"
                     app:layout_constraintTop_toTopOf="parent"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintStart_toEndOf="@id/tv_location_area_radius_7"/>
@@ -92,7 +94,7 @@
             android:layout_height="40dp"
             android:src="@drawable/ic_refresh_black"
             android:layout_marginEnd="20dp"
-            android:onClick="@{() -> vm.readUserLastLocation() }"
+            android:onClick="@{() -> vm.onLocationRadiusData(3.0f) }"
             app:layout_constraintTop_toTopOf="@id/hsv_area_radius"
             app:layout_constraintBottom_toBottomOf="@id/hsv_area_radius"
             app:layout_constraintEnd_toEndOf="parent"/>
@@ -146,7 +148,7 @@
             setDataCheckVisible="@{vm.zeroLocationDataList}"
             android:layout_width="90dp"
             android:layout_height="90dp"
-            android:onClick="@{() -> vm.readUserLastLocation()}"
+            android:onClick="@{() -> vm.onLocationRadiusData(3.0f) }"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="@id/gl_loading_top"
